// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sheets survey responses basic response 1`] = `
Array [
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Sheets",
      "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": null,
      "response": "5",
      "source": "Sheets",
      "submittedAt": undefined,
      "surveyQuestion": Object {
        "question": Object {
          "source": "Sheets",
          "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
        },
        "survey": Object {
          "source": "Sheets",
          "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
        },
      },
      "team": Object {
        "source": "Sheets",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4_survey_responses_1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Sheets",
      "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Sheets",
        "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
      },
      "survey": Object {
        "source": "Sheets",
        "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Sheets",
      "startedAt": null,
      "status": null,
      "type": null,
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
    },
  },
]
`;

exports[`sheets survey responses question metadata 1`] = `
Array [
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Sheets",
      "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": null,
      "response": "5",
      "source": "Sheets",
      "submittedAt": undefined,
      "surveyQuestion": Object {
        "question": Object {
          "source": "Sheets",
          "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
        },
        "survey": Object {
          "source": "Sheets",
          "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
        },
      },
      "team": Object {
        "source": "Sheets",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4_survey_responses_1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Sheets",
      "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Sheets",
        "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
      },
      "survey": Object {
        "source": "Sheets",
        "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Sheets",
      "startedAt": null,
      "status": null,
      "type": null,
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
    },
  },
  Object {
    "model": "survey_Question__Update",
    "record": Object {
      "at": 1697245567000,
      "mask": Array [
        "questionCategory",
        "responseType",
      ],
      "patch": Object {
        "questionCategory": Object {
          "category": "AlignmentAndGoals",
          "detail": "AlignmentAndGoals",
        },
        "responseType": Object {
          "category": "Binary",
          "detail": "Binary",
        },
      },
      "where": Object {
        "source": "Sheets",
        "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
      },
    },
  },
  Object {
    "model": "survey_Survey__Update",
    "record": Object {
      "at": 1697245567000,
      "mask": Array [
        "stats",
      ],
      "patch": Object {
        "stats": Object {
          "invitationCount": 0,
          "questionCount": 1,
          "responseCount": 1,
        },
      },
      "where": Object {
        "source": "Sheets",
        "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
      },
    },
  },
]
`;

exports[`sheets survey responses response with survey metadata 1`] = `
Array [
  Object {
    "model": "survey_User",
    "record": Object {
      "email": "john@doe.xyz",
      "name": "John Doe",
      "source": "Sheets",
      "uid": "john@doe.xyz",
    },
  },
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Sheets",
      "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
    },
  },
  Object {
    "model": "survey_TeamMembership",
    "record": Object {
      "member": Object {
        "source": "Sheets",
        "uid": "john@doe.xyz",
      },
      "team": Object {
        "source": "Sheets",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": Object {
        "source": "Sheets",
        "uid": "john@doe.xyz",
      },
      "response": "5",
      "source": "Sheets",
      "submittedAt": undefined,
      "surveyQuestion": Object {
        "question": Object {
          "source": "Sheets",
          "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
        },
        "survey": Object {
          "source": "Sheets",
          "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
        },
      },
      "team": Object {
        "source": "Sheets",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4_survey_responses_1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Sheets",
      "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Sheets",
        "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
      },
      "survey": Object {
        "source": "Sheets",
        "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": "This is a survey",
      "endedAt": 2023-10-09T14:09:37.000Z,
      "name": "Survey1",
      "source": "Sheets",
      "startedAt": 2023-10-09T14:09:37.000Z,
      "status": Object {
        "category": "Completed",
        "detail": "Completed",
      },
      "type": Object {
        "category": "ENPS",
        "detail": "ENPS",
      },
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
    },
  },
]
`;

exports[`sheets survey responses response with user and team info 1`] = `
Array [
  Object {
    "model": "survey_User",
    "record": Object {
      "email": "john@doe.xyz",
      "name": "John Doe",
      "source": "Sheets",
      "uid": "john@doe.xyz",
    },
  },
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Sheets",
      "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
    },
  },
  Object {
    "model": "survey_TeamMembership",
    "record": Object {
      "member": Object {
        "source": "Sheets",
        "uid": "john@doe.xyz",
      },
      "team": Object {
        "source": "Sheets",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": Object {
        "source": "Sheets",
        "uid": "john@doe.xyz",
      },
      "response": "5",
      "source": "Sheets",
      "submittedAt": undefined,
      "surveyQuestion": Object {
        "question": Object {
          "source": "Sheets",
          "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
        },
        "survey": Object {
          "source": "Sheets",
          "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
        },
      },
      "team": Object {
        "source": "Sheets",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4_survey_responses_1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Sheets",
      "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Sheets",
        "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
      },
      "survey": Object {
        "source": "Sheets",
        "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Sheets",
      "startedAt": null,
      "status": null,
      "type": null,
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
    },
  },
]
`;

exports[`sheets survey responses survey metadata 1`] = `
Array [
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Sheets",
      "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": null,
      "response": "5",
      "source": "Sheets",
      "submittedAt": undefined,
      "surveyQuestion": Object {
        "question": Object {
          "source": "Sheets",
          "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
        },
        "survey": Object {
          "source": "Sheets",
          "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
        },
      },
      "team": Object {
        "source": "Sheets",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4_survey_responses_1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Sheets",
      "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Sheets",
        "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
      },
      "survey": Object {
        "source": "Sheets",
        "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Sheets",
      "startedAt": null,
      "status": null,
      "type": null,
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
    },
  },
  Object {
    "model": "survey_Survey__Update",
    "record": Object {
      "at": 1697245567000,
      "mask": Array [
        "stats",
      ],
      "patch": Object {
        "stats": Object {
          "invitationCount": 0,
          "questionCount": 1,
          "responseCount": 1,
        },
      },
      "where": Object {
        "source": "Sheets",
        "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
      },
    },
  },
  Object {
    "model": "survey_Survey__Update",
    "record": Object {
      "at": 1697245567000,
      "mask": Array [
        "name",
        "description",
        "type",
        "status",
        "startedAt",
        "endedAt",
      ],
      "patch": Object {
        "description": "This is a survey",
        "endedAt": 2023-10-09T14:09:37.000Z,
        "name": "Survey1",
        "startedAt": 2023-10-09T14:09:37.000Z,
        "status": Object {
          "category": "Completed",
          "detail": "Completed",
        },
        "type": Object {
          "category": "ENPS",
          "detail": "ENPS",
        },
      },
      "where": Object {
        "source": "Sheets",
        "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
      },
    },
  },
]
`;

exports[`sheets survey responses uses team id 1`] = `
Array [
  Object {
    "model": "survey_User",
    "record": Object {
      "email": "john@doe.xyz",
      "name": "John Doe",
      "source": "Sheets",
      "uid": "john@doe.xyz",
    },
  },
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Sheets",
      "uid": "team1",
    },
  },
  Object {
    "model": "survey_TeamMembership",
    "record": Object {
      "member": Object {
        "source": "Sheets",
        "uid": "john@doe.xyz",
      },
      "team": Object {
        "source": "Sheets",
        "uid": "team1",
      },
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": Object {
        "source": "Sheets",
        "uid": "john@doe.xyz",
      },
      "response": "5",
      "source": "Sheets",
      "submittedAt": undefined,
      "surveyQuestion": Object {
        "question": Object {
          "source": "Sheets",
          "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
        },
        "survey": Object {
          "source": "Sheets",
          "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
        },
      },
      "team": Object {
        "source": "Sheets",
        "uid": "team1",
      },
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4_survey_responses_1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Sheets",
      "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Sheets",
        "uid": "3dbd78e458bab6402e2c370d65c3da160e8ff3f68585e176e0c0a0dd4801c56d",
      },
      "survey": Object {
        "source": "Sheets",
        "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Sheets",
      "startedAt": null,
      "status": null,
      "type": null,
      "uid": "10hWFrCr5c0J7wUjoPODgd7jt6pRjPBGJTtD6y_z2He4",
    },
  },
]
`;
